--- a/app/views/schedulers/show.html.erb
+++ b/app/views/schedulers/show.html.erb
@@ -6,20 +6,39 @@
   <div class="time">
     Horário
     <ul>
-      <li>06:00</li>
-      <li>07:00</li>
-      <li>08:00</li>
-      <li>09:00</li>
+      <% (6..23).each do |hour| %>
+        <%= content_tag :li, "%02d:00" % hour %>
+      <% end %>
     </ul>
   </div>
 
-  <div class="weekday">
-    Segunda
-    <ul>
-      <li><%= link_to 'Disponivel', '#' %></li>
-      <li><%= link_to 'Disponivel', '#' %></li>
-      <li><%= link_to 'Disponivel', '#' %></li>
-      <li><%= link_to 'Disponivel', '#' %></li>
-    </ul>
-  </div>
+  <% (1..5).each do |wday| %>
+    <div class="weekday wday-<%= wday %>">
+      <%= t('date.day_names')[wday] %>
+      <ul>
+        <% (6..23).each do |hour| %>
+          <% schedule = Schedule.by_day(
+            Schedule.new.beginning_of_week + (wday - 1)).
+            by_hour(hour) %>
+
+          <% if schedule.any? %>
+            <%= content_tag :li, link_to("Reservado por #{schedule.first. user.name}", '#')  %>
+          <% else %>
+            <%= content_tag :li, link_to("Disponível", '#'),
+              class: "hour-#{hour}",
+              onclick: 'reserve(this)',
+              data: { wday: wday, hour: hour } %>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 </div>
+
+<script>
+function reserve(li) {
+  $.post('/scheduler', $(li).data(), function(json) {
+    $(li).find('a').html(json.message);
+  }, 'json');
+}
+</script>
