add devise for users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap/_theme";
 @import "bootstrap";
+
+table.scheduler {
+  th, td { text-align: center; }
+}
