--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,12 @@
-<h2>Sign up</h2>
+<div class="border-form-div">
+  <h2>Cadastro</h2>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.text_field :login, autofocus: true, placeholder: 'Login' %>
+    <%= f.text_field :name, autofocus: true, placeholder: 'Nome' %>
+    <%= f.password_field :password, placeholder: 'Senha' %>
+    <%= f.submit "Cadastrar", class: 'btn btn-primary' %>
+  <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :login %><br />
-  <%= f.text_field :login, autofocus: true %></div>
-
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %></div>
-
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
