--- a/app/views/schedulers/show.html.erb
+++ b/app/views/schedulers/show.html.erb
@@ -14,16 +14,16 @@
         <%= content_tag :td, "%02d:00" % hour %>
 
         <% Week.available_days.each do |wday| %>
-          <% schedule = Schedule.by_day(
-            Week.init + (wday - 1)).
-            by_hour(hour) %>
+          <% # TODO: remove logic from view %>
+          <% schedule = Schedule.by_day(Week.at(wday)).by_hour(hour).first %>
 
-          <% if schedule.any? %>
-            <%= content_tag :td, content_tag(:span, "Reservado por #{schedule.first. user.name}", class: "label label-#{schedule.first.user == current_user ? 'success' : 'warning'}")  %>
+          <% if schedule %>
+            <%= content_tag :td, schedule_label(schedule) %>
+
           <% else %>
-            <%= content_tag :td, link_to("Disponível", '#'),
-              class: "wday-#{wday} hour-#{hour}",
-              onclick: 'reserve(this)',
+            <%= content_tag :td,
+              link_to("Disponível", '#'),
+              class: "wday-#{wday} hour-#{hour} schedulable",
               data: { wday: wday, hour: hour } %>
           <% end %>
         <% end %>
@@ -31,12 +31,3 @@
     <% end %>
   </tbody>
 </table>
-
-<script>
-function reserve(li) {
-  $.post('/scheduler', $(li).data(), function(json) {
-    $(li).html($('<span class="label label-success">').html(json.message));
-  }, 'json');
-}
-</script>
-</div>
